# HoI4ModdingPythonScripts

./: .gitignore  README.md  pyproject.toml  requirements-python3.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_suggestion.yml
.github/workflows/: ci.yml
python3/: hoi4focusgfxentry.py  hoi4ideagfxentry.py  hoi4statemanpowermultiplier.py  hoi4statemapgenerator.py  hoi4transfertechsegen.py
src/hoi4modtools/: __init__.py  localisation.py  statemap.py
tests/: test_imports.py
